-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 14
-
Component/s: hotspot
-
b25
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8234926 | 11.0.7-oracle | Tom Rodriguez | P3 | Resolved | Fixed | b01 |
While testing the latest JVMCI in JDK11 crashes were occurring during draining of the SATB buffers. The problem was tracked down to invalidate_nmethod_mirror being called on an nmethod whose InstalledCode instance was also dead in the current GC. Reading this oop using NativeAccess<ON_PHANTOM_OOP_REF> lead to that oop being enqueued in the SATB buffer. In JDK 14 it appears some other change in G1 disables those barriers at the point this code is executed but in JDK11 no such logic exists. This code never resurrect that oop so using the normal AS_NO_KEEPALIVE semantics is correct avoids attempting to enqueue the potentially dead object.
- backported by
-
JDK-8234926 [JVMCI] invalidate_nmethod_mirror shouldn't use a phantom reference
-
- Resolved
-