8234359: [JVMCI] invalidate_nmethod_mirror shouldn't use a phantom reference

Reviewed-by: kvn, eosterlund